<resources>
    <string name="action_carrier_lbs_consent">com.motorola.setupwizard.locationconsent.ACTION_SHOW_LOC_CONSENT</string>
    <string name="action_bua_intro">com.motorola.setupwizard.controller.START_SETUP</string>
    <string name="action_bua">com.motorola.BackupAssistanceClient.ACTION_MAIN_PROVISION</string>
    <string name="action_bua_extra_from_setup">LaunchedSetupFsm</string>
    <string name="action_sim_activation">com.motorola.setupwizard.VZW_SIM_STATUS</string>
    <string name="action_hux_email">com.motorola.hux.sncclient.LAUNCH_AUTHENTICATOR</string>
    <string name="action_dataswitch_datasettings">com.motorola.dataswitch.DATASETTINGS_ACTION</string>
    <string name="action_device_setup_notify">com.motorola.setupwizard.devicesetup.ACTION_SHOW_DEVICE_SETUP_NOTIFY</string>
    <string name="default_privacy_policy">standard</string>
    <string name="skip_setup_intent_action">com.motorola.blur.setup.ACTION_SKIP_SETUP</string>
    <string name="language_chooser_type">listview</string>
    <string name="setup_flow_map">verizon</string>
    <string name="cpu_idle_wait_title">Preparing device</string>
    <string name="cpu_idle_wait_msg">Please wait...</string>
    <string name="splash_screen_text">Welcome to Motorola</string>
    <string name="please_choose_a_language">Select your language:</string>
    <string name="welcome_to_motoblur">Welcome to MOTOBLUR</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="make_emergency_call_by_pressing_menu">To make an emergency call during setup, press the \"Menu\" key.</string>
    <string name="sign_up_or_login_main_text">You will need a MOTOBLUR account to use essential services on your phone as well as the MOTOBLUR Internet portal.</string>
    <string name="password_colon">Password:</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_title">Forgot password</string>
    <string name="enter_password">Enter password</string>
    <string name="motoblur_terms_of_service">MOTOBLUR Terms of Service</string>
    <string name="moto_service_review_the_above">"By selecting the \"I agree\" checkbox, you agree to the terms of the Motorola Software License Agreement, Terms of Service and Privacy Statement.

You must agree to these terms in order to use the device."</string>
    <string name="terms_and_conditions">Motorola Terms &amp; Conditions</string>
    <string name="sharing_additional_information">Sharing additional information</string>
    <string name="moto_service_agreement">Motorola Agreement</string>
    <string name="terms_of_service_check_caption">I agree to the </string>
    <string name="downloading_terms">Downloading terms…</string>
    <string name="creating_your_blur_account">Creating your MOTOBLUR account</string>
    <string name="generic_carrier_contact_text">Please call customer service to retrieve your password.</string>
    <string name="motoblur">MOTOBLUR</string>
    <string name="unverified_motoblur_account">Unverified MOTOBLUR account</string>
    <string name="cancel">Cancel</string>
    <string name="signin">Sign in</string>
    <string name="checking_for_updates">Checking for Updates…</string>
    <string name="downloading_updates">"Downloading update 
 
Please wait…"</string>
    <string name="error_deleting_account">Error Removing Account</string>
    <string name="congrats_title_login">You successfully logged in</string>
    <string name="congrats_title">Congratulations!</string>
    <string name="congrats_text">"Your setup is now complete! 

If you have setup any accounts, we will now import your content, such as contacts and email. This may take up to 30 minutes but you can start using your phone right away.

We recommend setting a Security Lock for this phone by going into Settings > Security &amp; Screen Lock."</string>
    <string name="setup_complete_title">Setup complete</string>
    <string name="setup_complete_text">"You've completed all PC and device configurations.

Start using your phone right away…"</string>
    <string name="done">Done</string>
    <string name="welcome_android">Welcome</string>
    <string name="privacy_policy">Your use of this phone is subject to the Motorola privacy policy and its terms.</string>
    <string name="learn_more">Learn more</string>
    <string name="emergency_call">Emergency call</string>
    <string name="create_later">Setup account later</string>
    <string name="email_colon">Email address:</string>
    <string name="location_consent_string">Location consent</string>
    <string name="location_consent_description">"Google's location service provides applications with your approximate location without using GPS. You can disable these features in Settings, under Location services."</string>
    <string name="use_location_service">"Allow Google's location service to collect anonymous location data. Collection will occur even when no applications are running."</string>
    <string name="signup">Register a new account</string>
    <string name="login">Use an existing account</string>
    <string name="password">Password</string>
    <string name="ok">OK</string>
    <string name="captcha_text">To verify your log-in please enter the text into the field below</string>
    <string name="terms_of_service_text">Internet data connection needed to view Terms and Conditions.</string>
    <string name="skip_setup_title">Skip setup</string>
    <string name="skip_setup_text">"If you skip setup, some features on the device will not be available.
 
 The device will remind you to complete setup when a data connection is available or if you try to use an application that requires you to complete setup.
 
 Select next to view Location consent, after which setup will end and take you to the Homescreen."</string>
    <string name="blur_account_setup">Blur Account Setup</string>
    <string name="restore_previous_device">Restore previous device?</string>
    <string name="restore_details_string">"Restore contacts, settings and accounts from a previous Motorola device?
"</string>
    <string name="yes_restore">Yes, restore now</string>
    <string name="no_restore">No, do not restore</string>
    <string name="privacy_policy_title">MOTOROLA PRIVACY POLICY</string>
    <string name="privacy_policy_summary">Motorola is serious about protecting the information that you entrust to us. This privacy policy describes how we collect information from your mobile device and what we do with it. Standard data usage charges may apply. You can learn more by reading our full Privacy Statement.</string>
    <string name="privacy_profiles_title">Privacy profiles</string>
    <string name="privacy_profiles_summary">Select a privacy profile that best suits your needs.</string>
    <string name="location_services_title">Location services</string>
    <string name="location_services_summary">Applications that can access your device location and what this information can help you do.</string>
    <string name="location_services_content_default">If you enable our location-based services, we will access location information based on GPS coordinates and the location of nearby cell towers and wireless networks to help you search for places near you, link patterns of device usage to significant locations and suggest appropriate device behaviors, research ways to improve our products and services, and comply with applicable laws.</string>
    <string name="collection_use_title">Collection and use</string>
    <string name="collection_use_summary">Types of data is collected from your device and how it is used to help Motorola improve services.</string>
    <string name="collection_use_content_default">Depending on which privacy profile you select, we will collect some or all of the following information: core functional data, performance data, analytics data, personal information, your application usage history, publicly available information from social network profiles linked to your device, and information about the websites you visit using your device’s built-in browser. We use this information to enable you to send and receive messages through your email and social network accounts, help support, troubleshoot and optimize your device’s performance, tell you about Motorola products and services, develop improvements to Motorola products and services, and perform demographic analysis and model market segments.</string>
    <string name="tracking_ads_title">Tracking and ads</string>
    <string name="tracking_ads_summary">Your device does not use web tracking technologies like tags or cookies.</string>
    <string name="tracking_ads_content_default">We do not place or access web tracking technologies like pixel tags or cookies on your device to store sensitive information like passwords or your personal data, analyze traffic, personalize device features, or research ways to improve Motorola products and services. However, websites you visit or apps that you install and use on your mobile device may place and use such trackers subject to their own terms of use.</string>
    <string name="security_title">Security</string>
    <string name="security_summary">Motorola uses standard security practices and protocols.</string>
    <string name="security_content_default">Before we share your information with service providers working on our behalf, we will require them to protect your information according to our standards and to not use your information for any independent purpose. We also use standard technical and organizational security measures to protect the information that we collect and use to provide you with services and support. You should use the security features provided to keep your device secure at all possible times.</string>
    <string name="contact_motorola_title">Contact Motorola</string>
    <string name="contact_motorola_summary">Contact Motorola with any questions or concerns.</string>
    <string name="contact_motorola_content_default">"You can contact Motorola to review, amend, correct, update, or delete your information or to ask questions about this privacy policy statement at:

Motorola Mobility
Privacy Compliance Program
600 US Highway 45, W435M
Libertyville, IL 60048
USA
Email: privacy@motorola.com"</string>
    <string name="full_privacy_title">Full Motorola privacy policy</string>
    <string name="full_privacy_summary">View entire Motorola privacy policy.</string>
    <string name="full_privacy_content_default">Internet data connection needed to view Privacy Policy.</string>
    <string name="motorola_privacy_profiles_summary">We can collect information about how you use your device in order to provide you with enhanced customer support and improve the quality of our products and services. Please select a privacy profile that meets your needs. For more information, please see our Privacy Policy.</string>
    <string name="motorola_privacy_profiles_footer">"You can change your selection at any time by going to the Privacy menu in your device's Settings application."</string>
    <string name="opt_out_title">None - %1$s</string>
    <string name="opt_out_summary">No data will be collected, except for anonymous information to keep your device up to date</string>
    <string name="support_title">Support - %1$s</string>
    <string name="support_summary">Information for technical support and to keep your device up to date</string>
    <string name="standard_title">Standard - %1$s</string>
    <string name="standard_summary">Information needed to support your device and to make recommendations about Motorola products</string>
    <string name="advanced_title">Advanced - %1$s</string>
    <string name="advanced_summary">Standard data plus information so your device can help you find places near you and make other recommendations</string>
</resources>