<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/connection_failed_screen" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/com.motorola.blur.setup">
    <ScrollView android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="left" android:layout_gravity="center_horizontal" android:paddingLeft="@dimen/content_area_left_padding" android:paddingTop="@dimen/AccSet_topSpacing" android:paddingRight="@dimen/content_area_right_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/motorola_privacy_profiles_summary" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <View android:layout_width="wrap_content" android:layout_height="20.0dip" android:layout_weight="1.0" />
                <RadioGroup android:orientation="vertical" android:id="@id/privacy_radio_group" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checkedButton="@id/standard">
                    <TextView android:textAppearance="?android:textAppearanceLarge" android:ellipsize="marquee" android:id="@id/advanced_text" android:paddingLeft="@dimen/radio_button_padding" android:paddingTop="10.0dip" android:fadingEdge="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/advanced_title" android:singleLine="true" />
                    <RadioButton android:id="@id/advanced" android:paddingLeft="@dimen/radio_button_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/advanced_summary" />
                    <TextView android:textAppearance="?android:textAppearanceLarge" android:ellipsize="marquee" android:id="@id/standard_text" android:paddingLeft="@dimen/radio_button_padding" android:paddingTop="10.0dip" android:fadingEdge="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/standard_title" android:singleLine="true" />
                    <RadioButton android:id="@id/standard" android:paddingLeft="@dimen/radio_button_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/standard_summary" />
                    <TextView android:textAppearance="?android:textAppearanceLarge" android:ellipsize="marquee" android:id="@id/support_text" android:paddingLeft="@dimen/radio_button_padding" android:paddingTop="10.0dip" android:fadingEdge="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/support_title" android:singleLine="true" />
                    <RadioButton android:id="@id/support" android:paddingLeft="@dimen/radio_button_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/support_summary" />
                    <TextView android:textAppearance="?android:textAppearanceLarge" android:ellipsize="marquee" android:id="@id/opt_out_text" android:paddingLeft="@dimen/radio_button_padding" android:paddingTop="10.0dip" android:fadingEdge="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/opt_out_title" android:singleLine="true" />
                    <RadioButton android:id="@id/opt_out" android:paddingLeft="@dimen/radio_button_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/opt_out_summary" />
                </RadioGroup>
                <View android:layout_width="wrap_content" android:layout_height="1.0dip" android:layout_weight="1.0" />
            </LinearLayout>
            <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="left" android:layout_gravity="center_horizontal" android:paddingLeft="@dimen/content_area_left_padding" android:paddingTop="@dimen/AccSet_topSpacing" android:paddingRight="@dimen/content_area_right_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/motorola_privacy_profiles_footer" />
        </LinearLayout>
    </ScrollView>
    <Button android:id="@id/okay" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="16.0dip" android:text="@android:string/ok" />
</LinearLayout>