<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/com.motorola.blur.setup">
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/AccSet_hspacing" android:paddingRight="@dimen/AccSet_hspacing" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:gravity="left" android:layout_gravity="left" android:paddingLeft="@dimen/content_area_left_padding" android:paddingRight="@dimen/content_area_right_padding" android:layout_marginTop="@dimen/AccSet_vspacing" android:layout_marginBottom="@dimen/AccSet_vspacing" android:text="@string/skip_setup_title" style="@style/AccSetTextView" />
            <TextView android:gravity="left" android:layout_gravity="left" android:paddingLeft="@dimen/AccSet_hspacing" android:paddingRight="@dimen/AccSet_hspacing" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/formitem_vspacing" android:layout_marginBottom="@dimen/formitem_vspacing" android:text="@string/skip_setup_text" android:singleLine="false" style="@style/FormItemTxt.A" />
            <View android:layout_width="1.0px" android:layout_height="wrap_content" android:layout_weight="1.0" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:id="@id/navigation_bar" style="@style/NavBar">
        <Button android:id="@id/back_button" android:text="@string/back" android:onClick="onClick" style="@style/NavBarSqrButton" />
        <Button android:id="@id/next_button" android:text="@string/next" android:onClick="onClick" style="@style/NavBarSqrButton" />
    </LinearLayout>
</LinearLayout>