<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/congrats_screen_group" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/com.motorola.blur.setup">
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:textStyle="bold" android:gravity="left" android:layout_gravity="left" android:paddingLeft="@dimen/content_area_left_padding" android:paddingTop="@dimen/AccSet_topSpacing" android:paddingRight="@dimen/content_area_right_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/location_consent_string" style="@style/AccSetTextView" />
            <TextView android:ellipsize="none" android:gravity="left" android:layout_gravity="left" android:paddingLeft="@dimen/content_area_left_padding" android:paddingTop="@dimen/AccSet_vspacing" android:paddingRight="@dimen/content_area_right_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/location_consent_description" android:singleLine="false" style="@style/AccSetTextViewMedium" />
            <LinearLayout android:orientation="horizontal" android:paddingLeft="@dimen/AccSet_indentSpacing" android:paddingTop="@dimen/AccSet_topSpacing" android:paddingRight="@dimen/AccSet_indentSpacing" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <CheckBox android:gravity="top" android:id="@id/check_box_use_location" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:layout_weight="0.0" />
                <TextView android:layout_gravity="top|left|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/formitem_hspacing" android:layout_marginBottom="@dimen/formitem_vspacing" android:text="@string/use_location_service" style="@style/AccSetTextViewCheckCaption" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:paddingLeft="@dimen/AccSet_indentSpacing" android:paddingTop="@dimen/AccSet_topSpacing" android:paddingRight="@dimen/AccSet_indentSpacing" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:id="@id/navigation_bar" style="@style/NavBar">
        <Button android:id="@id/back_button" android:text="@string/back" android:onClick="onClick" style="@style/NavBarSqrButton" />
        <Button android:id="@id/next_button" android:text="@string/next" android:onClick="onClick" style="@style/NavBarSqrButton" />
    </LinearLayout>
</LinearLayout>